# UnitigCoarsening

./: .gitignore  CMakeLists.txt  CppProperties.json  ExperimentLoggerUtil.cpp  Makefile  README.md  assembler.h  benchmark.sh  benchmarkParse.py  cmg.cpp  coarsen_kokkos template.h  coarsen_kokkos.h  coarsen_kokkos_template.h  coarseners.h  compact.h  compact_graph.h  definitions_kokkos.h  defs.h  driver.cpp  eigensolve_kokkos.h  hec_snippets.cu  heuristics.h  heuristics_template.h  jsonExperimentRunner.py  lmin_buckets.h  mtx2csr.cpp  sgpar.c  sgpar.cpp  sgpar.h  tests.cpp  textStatsToCSV.py
